--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "prettier": "3.0.1"
   }
 }
